Some logical fixes and minor style fixes.